Fixing build error
Used List.of, which is not available on java 8 (running java 11 on my PC)